add cent publish
